--- a/src/Churchee.Module.UI/Components/ModalForm.razor
+++ b/src/Churchee.Module.UI/Components/ModalForm.razor
@@ -20,7 +20,7 @@
                 <div class="sticky-formButtons">
 
                     <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End">
-                        <RadzenButton Disabled="_formInvalid" Text="Submit" ButtonStyle="ButtonStyle.Success" ButtonType="ButtonType.Submit" />
+                        <RadzenButton Text="Submit" ButtonStyle="ButtonStyle.Success" ButtonType="ButtonType.Submit" />
                         <RadzenButton Text="Cancel" Click="Cancel" ButtonStyle="ButtonStyle.Danger" ButtonType="ButtonType.Button" />
                     </RadzenStack>
 
