--- a/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
+++ b/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
@@ -1,34 +1,74 @@
-﻿@page "/events"
+﻿@page "/management/events"
 @inherits BasePage
+@using Churchee.Module.Events.Features.Commands
 @using Churchee.Module.Events.Features.Queries
+@using Churchee.Module.Site.Features.CDN.Queries
 @using Churchee.Module.UI.Components
-@using MediatR
-@using Radzen
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.Extensions.Configuration
+@using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Sections
+@using MediatR
+@using Radzen.Blazor
+@using Radzen
 
-<PageName Name="Events"></PageName>
+<PageName></PageName>
 
-@if (events != null && events.Any())
-{
-    <div>
-        @foreach(var itm in events)
-        {
-            <div>@itm.Title</div>
-        }
+<SectionContent SectionName="top-bar">
+    <div class="rz-breadcrumb-item">
+        <a class="rz-button rz-button-sm rz-success" href="/management/events/create">Create</a>
     </div>
-}
-else
-{
-    <div>No events found.</div>
-}
+</SectionContent>
+
+
+<Grid TItem="GetListingQueryResponseItem" Count="count" IsLoading=isLoading Data=listingData LoadData="@LoadData" ShowEdit="true" ImagePrefix="@(imagePrefix)" OnDelete="OnDelete"></Grid>
 
 @code {
-    List<GetListingQueryResponseItem> events;
+
+    string imagePrefix = "";
 
     protected override async Task OnInitializedAsync()
     {
-        // Provide default paging parameters (skip, take) and empty sort/filter
-        var result = await Mediator.Send(new GetListingQuery(0, int.MaxValue, string.Empty, string.Empty));
-        events = result.Data.ToList();
+        imagePrefix = TenantResolver.GetCDNPrefix();
+
+        await base.OnInitializedAsync();
     }
+
+    IEnumerable<GetListingQueryResponseItem> listingData;
+
+    bool isLoading = false;
+
+    int count = 0;
+
+    async Task OnDelete(GetListingQueryResponseItem item)
+    {
+        var result = await Mediator.Send(new DeleteEventCommand(item.Id));
+
+        if (!result.IsSuccess)
+        {
+            NotificationService.Notify(NotificationSeverity.Error, "Error: Could not remove Event");
+
+            return;
+        }
+
+        NotificationService.Notify(NotificationSeverity.Success, "Event Deleted");
+    }
+
+    async Task LoadData(LoadDataArgs args)
+    {
+        isLoading = true;
+
+        var result = await Mediator.Send(new GetListingQuery(
+                    skip: args.Skip ?? 0,
+                    take: args.Top ?? 20,
+                    searchText: args.Filter ?? string.Empty,
+                    orderBy: string.IsNullOrEmpty(args.OrderBy) ? "CreatedDate desc" : args.OrderBy), default);
+
+        listingData = result.Data;
+
+        count = result.RecordsTotal;
+
+        isLoading = false;
+    }
+
 }
