--- a/src/Churchee.Module.UI/Components/FormFields.razor
+++ b/src/Churchee.Module.UI/Components/FormFields.razor
@@ -215,10 +215,10 @@
                                     <RadzenHtmlEditorStrikeThrough />
                                     <RadzenHtmlEditorSeparator />
                                     <RadzenHtmlEditorRemoveFormat />
-                                    <RadzenHtmlEditorSource />
                                     <RadzenHtmlEditorLink />
                                     <RadzenHtmlEditorUnorderedList />
                                     <RadzenHtmlEditorOrderedList />
+                                    <RadzenHtmlEditorSource />
                                 </RadzenHtmlEditor>
                             }
                             if (dataType == DataTypes.HtmlNoLinks)
@@ -234,9 +234,9 @@
                                     <RadzenHtmlEditorStrikeThrough />
                                     <RadzenHtmlEditorSeparator />
                                     <RadzenHtmlEditorRemoveFormat />
-                                    <RadzenHtmlEditorSource />
                                     <RadzenHtmlEditorUnorderedList />
                                     <RadzenHtmlEditorOrderedList />
+                                    <RadzenHtmlEditorSource />
                                 </RadzenHtmlEditor>
                             }
                             if (dataType == DataTypes.HtmlTall)
@@ -253,10 +253,11 @@
                                     <RadzenHtmlEditorStrikeThrough />
                                     <RadzenHtmlEditorSeparator />
                                     <RadzenHtmlEditorRemoveFormat />
-                                    <RadzenHtmlEditorSource />
+                                    <RadzenHtmlEditorLink />
                                     <RadzenHtmlEditorUnorderedList />
                                     <RadzenHtmlEditorOrderedList />
                                     <EditorButton Title="Insert Image" Click=@OpenImageUploadEditor Icon="image"/>
+                                    <RadzenHtmlEditorSource />
                                 </RadzenHtmlEditor>
                             }       
 
