--- a/src/Churchee.Module.Events/Components/EventDatesManager.razor
+++ b/src/Churchee.Module.Events/Components/EventDatesManager.razor
@@ -31,8 +31,8 @@
 
     <RadzenStack Orientation="Orientation.Horizontal">
 
-    <RadzenDatePicker Max=End DateFormat="dd-MM-yyyy HH:mm" ShowTime=true @bind-Value=Start />
-    <RadzenDatePicker Min=Start DateFormat="dd-MM-yyyy HH:mm" ShowTime=true @bind-Value=End />
+    <RadzenDatePicker Max=@End?.Date DateFormat="dd-MM-yyyy HH:mm" ShowTime=true @bind-Value=Start />
+    <RadzenDatePicker Min=@Start?.Date DateFormat="dd-MM-yyyy HH:mm" ShowTime=true @bind-Value=End />
 
     <RadzenButton ButtonStyle="ButtonStyle.Success" class="btn-add" Icon="add" Click="AddEntry"></RadzenButton>
 
@@ -48,17 +48,30 @@
     public DateTime? Start { get; set; }
     public DateTime? End { get; set; }
 
+    [Inject]
+    protected NotificationService NotificationService { get; set; } = default!;
+
     public void AddEntry()
     {
-        if(Start != null)
+        if (Start == null)
         {
-            Dates.Add(new EventDateModel(Start, End));
+            NotificationService.Notify(NotificationSeverity.Warning, "Validation", "Start date is required.");
 
-            Start = null;
-            End = null;
-
-            StateHasChanged();
+            return;
         }
+        if (End != null && End < Start )
+        {
+            NotificationService.Notify(NotificationSeverity.Warning, "Validation", "End date must be after start date.");
+
+            return;
+        }
+
+        Dates.Add(new EventDateModel(Start, End));
+
+        Start = null;
+        End = null;
+
+        StateHasChanged();
     }
 
     public void RemoveEntry(EventDateModel item)
